<resources>
    <string name="app_name">Gscom</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="send">Send</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">UPDATE</string>
    <string name="dashboard">Dashboard</string>
    <string name="total_complaints">Total Complaints</string>
    <string name="total_complaints1">Total Complaints</string>
    <string name="_10">10</string>
    <string name="active">Active</string>
    <string name="_05">05</string>
    <string name="inactive">Inactive</string>
    <string name="pending">Pending</string>
    <string name="_4">4</string>
    <string name="_12">12</string>
    <string name="closed">Closed</string>
    <string name="pending1">Pending</string>
    <string name="closed1">Closed</string>
    <string name="complaints">Complaints</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="ad0123456789">AD0123456789</string>
    <string name="details">Details</string>
    <string name="details1">Details</string>
    <string name="rr_no">RR NO. :</string>
    <string name="ac_id">AC ID:</string>
    <string name="name">NAME :</string>
    <string name="category">CATEGORY :</string>
    <string name="place">PLACE :</string>
    <string name="date">DATE :</string>
    <string name="aabcdef">AABCDEF :</string>
    <string name="efghijkl">EFGHIJKL :</string>
    <string name="submit1">SUBMIT</string>
    <string name="remarks">Remarks :</string>
</resources>