<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/homeback"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_white_colour"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:paddingStart="10dp"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmailForgot" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="286dp"
        android:layout_height="21dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="Gulbarga Electricity Supply Co. Ltd."
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edEmailForgot"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_white_colour"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingStart="10dp"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/forgot_password"
        android:textColor="#056633"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_colour"
        android:fontFamily="@font/roboto"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>