<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/homeback"
    tools:context=".ChangePassword">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="123dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="286dp"
        android:layout_height="21dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/roboto"
        android:text="Gulbarga Electricity Supply Co. Ltd."
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/current_password"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/bg_white_colour"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/current_password"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/New_Password"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_white_colour"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/new_password"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_password" />


    <EditText
        android:id="@+id/Confirm_Password"
        android:layout_width="305dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_white_colour"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/confirm_password"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/New_Password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_colour"
        android:fontFamily="@font/roboto"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Confirm_Password" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>